WIP
The overall concept sounds more realistic now.